# Reconcile-CMA-Gateway-de-Dados

./: .coverage  .env_sample  .gitignore  CMA_Gateway.schema.sql  README.md  data.json  loadenvs.sh  output.csv  pyproject.toml  reset_db.sh  show_table.py
app/: app.py  collect_cma_web.py  collect_sample.py  controller.py  data_isolate_by_sensor_id.py  hello.py  logger.py  login.py  output.md  scadalts.py  settings.py  translator.py  truncate_db.py
app/adapters/: gateway.py
app/getters/: __init__.py  gateway.py  gateways.py  hardware.py  register.py  sensor_modbus.py  sensors.py  temp.py
app/reconcile/: cma_gateway_db.py  dnp3.py  dp_modbus.py  dp_tags.py  eqp_dnp3.py  eqp_modbus.py  eqp_tags.py  gateway.py  reconciliar.py  scadalts.py  scadalts_v1.py
app/reconcile2/: main.py
app/reconcile2/core/: data_loader.py  data_synchronizer.py  data_translator.py  db_connection.py  db_schema.py
app/reconcile2/domain/: equipment_sync.py  gateway_sync.py  modbus_sync.py  tags_sync.py
app/reconcile2/scadalts/: mutations.py
app/utils/: data.py  http_utils.py
logs/: README.md
tests/: conftest.py  fixtures.json  logger.py  test.py  test_gateways.py  test_hardwares.py  test_registers.py  test_sensors.py  test_settings.py  test_translation.py
