[project]
name = "gateway_dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "pandas>=2.2.3",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
]
